--- a/templates/game.html
+++ b/templates/game.html
@@ -1,9 +1,7 @@
-<html>
-<head>
-    <title>Game</title>
-</head>
-<body>
-    <form action="/madlib">
+{% extends 'base.html' %}
+{% block title %}Madlibs!{% endblock %}
+{% block content %}
+    <form class="mytext" action="/madlib">
         Name: <input type="text" name="name"><br>
         Pick a color:
         <select name="color">
@@ -27,5 +25,4 @@
         <input type="checkbox" name="animal" value="yak">yak<br>
         <input type="submit" value="Madlibs!">
     </form>
-</body>
-</html>
+{% endblock %}
