--- a/templates/goodbye.html
+++ b/templates/goodbye.html
@@ -1,8 +1,7 @@
-<html>
-<head>
-    <title>Goodbye</title>
-</head>
-<body>
-    Goodbye! We'll miss you :(
-</body>
-</html>
+{% extends 'base.html' %}
+{% block title %}Goodbye{% endblock %}
+{% block content %}
+    <div class="mytext">
+        Goodbye! We'll miss you :(
+    </div>
+{% endblock %}
