--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,16 +1,11 @@
-<!doctype html>
-<html>
-<head>
-  <title>Hi There!</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block title %}Hi There!{% endblock %}
 
+{% block content %}
 <h1>Hi There!</h1>
 
-<form action="/greet">
+<form class="mytext" action="/greet">
   What is your name? <input type="text" name="person">
   <input type="submit">
 </form>
-
-</body>
-</html>
+{% endblock %}
